bindings/ruby/ext/blazen/blazen.h


typedef struct BlazenControlPlaneClient BlazenControlPlaneClient;
typedef struct BlazenControlPlaneSubscription BlazenControlPlaneSubscription;
typedef struct BlazenControlPlaneWorker BlazenControlPlaneWorker;
typedef struct BlazenError BlazenError;
typedef struct BlazenFuture BlazenFuture;
typedef struct BlazenModel BlazenModel;
typedef struct BlazenModelRequest BlazenModelRequest;
typedef struct BlazenPeerClient BlazenPeerClient;
typedef struct BlazenPeerServer BlazenPeerServer;
typedef struct BlazenRunStateSnapshot BlazenRunStateSnapshot;
typedef struct BlazenStreamChunk BlazenStreamChunk;
typedef struct BlazenTokenUsage BlazenTokenUsage;
typedef struct BlazenToolCall BlazenToolCall;
typedef struct BlazenWorkerInfoList BlazenWorkerInfoList;
typedef struct BlazenWorkflowResult BlazenWorkflowResult;
typedef struct {
    void *user_data;
    void (*drop_user_data)(void *user_data);
    int32_t (*handle)(void *user_data,
                      const char *run_id,
                      const char *workflow_name,
                      const char *input_json,
                      char **out_json,
                      BlazenError **out_err);
    void (*on_cancel)(void *user_data, const char *run_id);
    void (*on_drain)(void *user_data, bool immediate);
} BlazenAssignmentHandlerVTable;
typedef struct {
    void *user_data;
    void (*drop_user_data)(void *user_data);
    void (*on_event)(void *user_data,
                     const char *run_id,
                     const char *event_type,
                     const char *data_json,
                     uint64_t timestamp_ms);
    void (*on_close)(void *user_data);
    void (*on_error)(void *user_data, const char *error);
} BlazenRunEventSinkVTable;
typedef struct {
    void *user_data;
    void (*drop_user_data)(void *user_data);
    int32_t (*on_chunk)(void *user_data, BlazenStreamChunk *chunk, BlazenError **out_err);
    int32_t (*on_done)(void *user_data,
                       char *finish_reason,
                       BlazenTokenUsage *usage,
                       BlazenError **out_err);
    int32_t (*on_error)(void *user_data, BlazenError *err, BlazenError **out_err);
} BlazenCompletionStreamSinkVTable;
typedef struct {
    BaseProvider _0;
} BlazenBaseProvider;
typedef struct {
    InnerProviderDefaults _0;
} BlazenProviderDefaults;
int32_t blazen_controlplane_client_connect_blocking(const char *endpoint,
                                                    BlazenControlPlaneClient **out_client,
                                                    BlazenError **out_err);
 BlazenFuture *blazen_controlplane_client_connect(const char *endpoint);
 void blazen_controlplane_client_free(BlazenControlPlaneClient *client);
int32_t blazen_controlplane_client_submit_workflow_blocking(const BlazenControlPlaneClient *client,
                                                            const char *workflow_name,
                                                            const char *input_json,
                                                            const char *required_tags_json,
                                                            bool wait_for_worker,
                                                            BlazenRunStateSnapshot **out_snapshot,
                                                            BlazenError **out_err);
BlazenFuture *blazen_controlplane_client_submit_workflow(const BlazenControlPlaneClient *client,
                                                         const char *workflow_name,
                                                         const char *input_json,
                                                         const char *required_tags_json,
                                                         bool wait_for_worker);
int32_t blazen_controlplane_client_cancel_workflow_blocking(const BlazenControlPlaneClient *client,
                                                            const char *run_id,
                                                            BlazenRunStateSnapshot **out_snapshot,
                                                            BlazenError **out_err);
BlazenFuture *blazen_controlplane_client_cancel_workflow(const BlazenControlPlaneClient *client,
                                                         const char *run_id);
int32_t blazen_controlplane_client_describe_workflow_blocking(const BlazenControlPlaneClient *client,
                                                              const char *run_id,
                                                              BlazenRunStateSnapshot **out_snapshot,
                                                              BlazenError **out_err);
BlazenFuture *blazen_controlplane_client_describe_workflow(const BlazenControlPlaneClient *client,
                                                           const char *run_id);
int32_t blazen_controlplane_client_list_workers_blocking(const BlazenControlPlaneClient *client,
                                                         BlazenWorkerInfoList **out_list,
                                                         BlazenError **out_err);
 BlazenFuture *blazen_controlplane_client_list_workers(const BlazenControlPlaneClient *client);
int32_t blazen_controlplane_client_drain_worker_blocking(const BlazenControlPlaneClient *client,
                                                         const char *node_id,
                                                         bool immediate,
                                                         BlazenError **out_err);
BlazenFuture *blazen_controlplane_client_drain_worker(const BlazenControlPlaneClient *client,
                                                      const char *node_id,
                                                      bool immediate);
int32_t blazen_controlplane_worker_new_blocking(const char *endpoint,
                                                const char *node_id,
                                                const char *capabilities_json,
                                                const char *tags_json,
                                                uint32_t admission_mode,
                                                uint64_t admission_param,
                                                BlazenAssignmentHandlerVTable vtable,
                                                BlazenControlPlaneWorker **out_worker,
                                                BlazenError **out_err);
int32_t blazen_controlplane_worker_run_blocking(const BlazenControlPlaneWorker *worker,
                                                BlazenError **out_err);
 BlazenFuture *blazen_controlplane_worker_run(const BlazenControlPlaneWorker *worker);
 void blazen_controlplane_worker_shutdown(const BlazenControlPlaneWorker *worker);
 void blazen_controlplane_worker_free(BlazenControlPlaneWorker *worker);
int32_t blazen_controlplane_client_connect_with_mtls_blocking(const char *endpoint,
                                                              const char *cert_path,
                                                              const char *key_path,
                                                              const char *ca_path,
                                                              BlazenControlPlaneClient **out_client,
                                                              BlazenError **out_err);
BlazenFuture *blazen_controlplane_client_connect_with_mtls(const char *endpoint,
                                                           const char *cert_path,
                                                           const char *key_path,
                                                           const char *ca_path);
int32_t blazen_controlplane_worker_new_with_mtls_blocking(const char *endpoint,
                                                          const char *node_id,
                                                          const char *capabilities_json,
                                                          const char *tags_json,
                                                          uint32_t admission_mode,
                                                          uint64_t admission_param,
                                                          const char *cert_path,
                                                          const char *key_path,
                                                          const char *ca_path,
                                                          BlazenAssignmentHandlerVTable vtable,
                                                          BlazenControlPlaneWorker **out_worker,
                                                          BlazenError **out_err);
int32_t blazen_controlplane_client_subscribe_run_events(const BlazenControlPlaneClient *client,
                                                        const char *run_id,
                                                        BlazenRunEventSinkVTable sink,
                                                        BlazenControlPlaneSubscription **out_sub,
                                                        BlazenError **out_err);
int32_t blazen_controlplane_client_subscribe_all(const BlazenControlPlaneClient *client,
                                                 const char *required_tags_json,
                                                 BlazenRunEventSinkVTable sink,
                                                 BlazenControlPlaneSubscription **out_sub,
                                                 BlazenError **out_err);
 void blazen_controlplane_subscription_cancel(BlazenControlPlaneSubscription *sub);
 void blazen_controlplane_subscription_free(BlazenControlPlaneSubscription *sub);
 BlazenPeerServer *blazen_peer_server_new(const char *node_id);
int32_t blazen_peer_server_serve_blocking(const BlazenPeerServer *server,
                                          const char *listen_address,
                                          BlazenError **out_err);
 BlazenFuture *blazen_peer_server_serve(const BlazenPeerServer *server, const char *listen_address);
 void blazen_peer_server_free(BlazenPeerServer *server);
int32_t blazen_peer_client_connect(const char *address,
                                   const char *client_node_id,
                                   BlazenPeerClient **out_client,
                                   BlazenError **out_err);
 char *blazen_peer_client_node_id(const BlazenPeerClient *client);
int32_t blazen_peer_client_run_remote_workflow_blocking(const BlazenPeerClient *client,
                                                        const char *workflow_name,
                                                        const char *const *step_ids,
                                                        uintptr_t step_ids_count,
                                                        const char *input_json,
                                                        int64_t timeout_secs,
                                                        BlazenWorkflowResult **out_result,
                                                        BlazenError **out_err);
BlazenFuture *blazen_peer_client_run_remote_workflow(const BlazenPeerClient *client,
                                                     const char *workflow_name,
                                                     const char *const *step_ids,
                                                     uintptr_t step_ids_count,
                                                     const char *input_json,
                                                     int64_t timeout_secs);
 void blazen_peer_client_free(BlazenPeerClient *client);
 void blazen_base_provider_with_system_prompt(BlazenBaseProvider *handle, const char *s);
 void blazen_base_provider_with_tools_json(BlazenBaseProvider *handle, const char *json);
 void blazen_base_provider_with_response_format_json(BlazenBaseProvider *handle, const char *json);
void blazen_base_provider_with_defaults(BlazenBaseProvider *handle,
                                        const BlazenProviderDefaults *d);
 BlazenProviderDefaults *blazen_base_provider_defaults(const BlazenBaseProvider *handle);
 char *blazen_base_provider_model_id(const BlazenBaseProvider *handle);
 char *blazen_base_provider_provider_id(const BlazenBaseProvider *handle);
 void blazen_base_provider_free(BlazenBaseProvider *handle);
int32_t blazen_complete_streaming_blocking(const BlazenModel *model,
                                           BlazenModelRequest *request,
                                           BlazenCompletionStreamSinkVTable sink,
                                           BlazenError **out_err);
BlazenFuture *blazen_complete_streaming(const BlazenModel *model,
                                        BlazenModelRequest *request,
                                        BlazenCompletionStreamSinkVTable sink);
 BlazenStreamChunk *blazen_stream_chunk_new(const char *content_delta, bool is_final);
 void blazen_stream_chunk_tool_calls_push(BlazenStreamChunk *handle, BlazenToolCall *tool_call);
 char *blazen_stream_chunk_content_delta(const BlazenStreamChunk *handle);
 bool blazen_stream_chunk_is_final(const BlazenStreamChunk *handle);
 uintptr_t blazen_stream_chunk_tool_calls_count(const BlazenStreamChunk *handle);
 BlazenToolCall *blazen_stream_chunk_tool_calls_get(const BlazenStreamChunk *handle, uintptr_t idx);
 void blazen_stream_chunk_free(BlazenStreamChunk *handle);