bindings/ruby/lib/blazen/ffi.rb


    # -------------------------------------------------------------------
    # BaseProvider — completion model with instance-level defaults
    # -------------------------------------------------------------------
    attach_function :blazen_base_provider_with_system_prompt,
                    [:pointer, :pointer], :void
    attach_function :blazen_base_provider_with_tools_json,
                    [:pointer, :pointer], :void
    attach_function :blazen_base_provider_with_response_format_json,
                    [:pointer, :pointer], :void
    attach_function :blazen_base_provider_with_defaults,
                    [:pointer, :pointer], :void
    attach_function :blazen_base_provider_defaults,
                    [:pointer], :pointer
    attach_function :blazen_base_provider_model_id,
                    [:pointer], :pointer
    attach_function :blazen_base_provider_provider_id,
                    [:pointer], :pointer
    attach_function :blazen_base_provider_free, [:pointer], :void

    # -------------------------------------------------------------------
    # Streaming
    # -------------------------------------------------------------------
    attach_function :blazen_complete_streaming_blocking,
                    [:pointer, :pointer,
                     BlazenCompletionStreamSinkVTable.by_value, :pointer],
                    :int32,
                    blocking: true
    attach_function :blazen_complete_streaming,
                    [:pointer, :pointer,
                     BlazenCompletionStreamSinkVTable.by_value],
                    :pointer
    attach_function :blazen_stream_chunk_new,
                    [:pointer, :bool], :pointer
    attach_function :blazen_stream_chunk_tool_calls_push,
                    [:pointer, :pointer], :void
    attach_function :blazen_stream_chunk_content_delta,   [:pointer], :pointer
    attach_function :blazen_stream_chunk_is_final,        [:pointer], :bool
    attach_function :blazen_stream_chunk_tool_calls_count, [:pointer], :size_t
    attach_function :blazen_stream_chunk_tool_calls_get,
                    [:pointer, :size_t], :pointer
    attach_function :blazen_stream_chunk_free, [:pointer], :void

    # -------------------------------------------------------------------
    # Peer — Server / Client
    # -------------------------------------------------------------------
    attach_function :blazen_peer_server_new, [:pointer], :pointer
    attach_function :blazen_peer_server_serve_blocking,
                    [:pointer, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_peer_server_serve,
                    [:pointer, :pointer], :pointer
    attach_function :blazen_peer_server_free, [:pointer], :void

    attach_function :blazen_peer_client_connect,
                    [:pointer, :pointer, :pointer, :pointer], :int32
    attach_function :blazen_peer_client_node_id, [:pointer], :pointer
    attach_function :blazen_peer_client_run_remote_workflow_blocking,
                    [:pointer, :pointer, :pointer, :size_t, :pointer, :int64,
                     :pointer, :pointer],
                    :int32,
                    blocking: true
    attach_function :blazen_peer_client_run_remote_workflow,
                    [:pointer, :pointer, :pointer, :size_t, :pointer, :int64],
                    :pointer
    attach_function :blazen_peer_client_free, [:pointer], :void

    # -------------------------------------------------------------------
    # Control plane — Client / Worker / records / vtables
    #
    # Only attached when the native lib was built with the +distributed+
    # feature. Symbol probes happen at attach time; missing symbols raise
    # +FFI::NotFoundError+, which we trap by feature-detecting from the
    # idiomatic wrapper in +lib/blazen/controlplane.rb+ (mirrors the peer
    # surface).
    # -------------------------------------------------------------------

    # AssignmentHandler vtable callbacks
    callback :assignment_handler_drop_user_data, [:pointer], :void
    callback :assignment_handler_handle,
             [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer],
             :int32
    callback :assignment_handler_on_cancel, [:pointer, :pointer], :void
    callback :assignment_handler_on_drain, [:pointer, :bool], :void

    # By-value vtable struct (mirrors +BlazenAssignmentHandlerVTable+ in
    # +blazen.h+).
    class BlazenAssignmentHandlerVTable < ::FFI::Struct
      layout :user_data,       :pointer,
             :drop_user_data,  :assignment_handler_drop_user_data,
             :handle,          :assignment_handler_handle,
             :on_cancel,       :assignment_handler_on_cancel,
             :on_drain,        :assignment_handler_on_drain
    end

    # RunEventSink vtable callbacks — used by the control-plane
    # subscription surface to deliver +RunEvent+ frames into Ruby.
    callback :run_event_sink_drop_user_data, [:pointer], :void
    callback :run_event_sink_on_event,
             [:pointer, :pointer, :pointer, :pointer, :uint64],
             :void
    callback :run_event_sink_on_close, [:pointer], :void
    callback :run_event_sink_on_error, [:pointer, :pointer], :void

    # By-value vtable struct (mirrors +BlazenRunEventSinkVTable+ in
    # +blazen.h+).
    class BlazenRunEventSinkVTable < ::FFI::Struct
      layout :user_data,       :pointer,
             :drop_user_data,  :run_event_sink_drop_user_data,
             :on_event,        :run_event_sink_on_event,
             :on_close,        :run_event_sink_on_close,
             :on_error,        :run_event_sink_on_error
    end

    # Client lifecycle
    attach_function :blazen_controlplane_client_connect_blocking,
                    [:pointer, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_controlplane_client_connect,
                    [:pointer], :pointer
    attach_function :blazen_controlplane_client_connect_with_mtls_blocking,
                    [:pointer, :pointer, :pointer, :pointer, :pointer, :pointer],
                    :int32,
                    blocking: true
    attach_function :blazen_controlplane_client_connect_with_mtls,
                    [:pointer, :pointer, :pointer, :pointer], :pointer
    attach_function :blazen_controlplane_client_free, [:pointer], :void

    # Workflow lifecycle RPCs
    attach_function :blazen_controlplane_client_submit_workflow_blocking,
                    [:pointer, :pointer, :pointer, :pointer, :bool,
                     :pointer, :pointer],
                    :int32,
                    blocking: true
    attach_function :blazen_controlplane_client_submit_workflow,
                    [:pointer, :pointer, :pointer, :pointer, :bool], :pointer

    attach_function :blazen_controlplane_client_cancel_workflow_blocking,
                    [:pointer, :pointer, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_controlplane_client_cancel_workflow,
                    [:pointer, :pointer], :pointer

    attach_function :blazen_controlplane_client_describe_workflow_blocking,
                    [:pointer, :pointer, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_controlplane_client_describe_workflow,
                    [:pointer, :pointer], :pointer

    attach_function :blazen_controlplane_client_list_workers_blocking,
                    [:pointer, :pointer, :pointer], :int32,
                    blocking: true
    attach_function :blazen_controlplane_client_list_workers,
                    [:pointer], :pointer

    attach_function :blazen_controlplane_client_drain_worker_blocking,
                    [:pointer, :pointer, :bool, :pointer], :int32,
                    blocking: true
    attach_function :blazen_controlplane_client_drain_worker,
                    [:pointer, :pointer, :bool], :pointer

    # Worker lifecycle
    attach_function :blazen_controlplane_worker_new_blocking,
                    [:pointer, :pointer, :pointer, :pointer,
                     :uint32, :uint64,
                     BlazenAssignmentHandlerVTable.by_value,
                     :pointer, :pointer],
                    :int32,
                    blocking: true
    attach_function :blazen_controlplane_worker_new_with_mtls_blocking,
                    [:pointer, :pointer, :pointer, :pointer,
                     :uint32, :uint64,
                     :pointer, :pointer, :pointer,
                     BlazenAssignmentHandlerVTable.by_value,
                     :pointer, :pointer],
                    :int32,
                    blocking: true
    attach_function :blazen_controlplane_worker_run_blocking,
                    [:pointer, :pointer], :int32, blocking: true
    attach_function :blazen_controlplane_worker_run,
                    [:pointer], :pointer
    attach_function :blazen_controlplane_worker_shutdown, [:pointer], :void
    attach_function :blazen_controlplane_worker_free, [:pointer], :void

    # Subscription lifecycle
    attach_function :blazen_controlplane_client_subscribe_run_events,
                    [:pointer, :pointer,
                     BlazenRunEventSinkVTable.by_value,
                     :pointer, :pointer],
                    :int32,
                    blocking: true
    attach_function :blazen_controlplane_client_subscribe_all,
                    [:pointer, :pointer,
                     BlazenRunEventSinkVTable.by_value,
                     :pointer, :pointer],
                    :int32,
                    blocking: true
    attach_function :blazen_controlplane_subscription_cancel,
                    [:pointer], :void
    attach_function :blazen_controlplane_subscription_free,
                    [:pointer], :void
